# bacnet-mcp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: prod.yml  pypi.yml  test.yml
examples/openai/: README.md  main.py  pyproject.toml
examples/openai-agents/: pyproject.toml
examples/pydantic-ai/: pyproject.toml
src/bacnet_mcp/: cli.py  server.py
tests/: conftest.py  server_test.py
