[project]
name = "bacnet-mcp"
version = "0.1.17"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bacpypes3>=0.0.102",
    "fastmcp>=2.8.0",
    "pydantic-settings>=2.9.1",
]

[project.scripts]
bacnet-mcp = "bacnet_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]
